Fix checkbox & label view on narrow viewport by using inline-block display

--- a/app/assets/stylesheets/preact/onboarding-modal.scss
+++ b/app/assets/stylesheets/preact/onboarding-modal.scss
@@ -517,7 +517,7 @@ $onboarding-user-selected-hover: rgba(71, 85, 235, 0.2);
       @extend .crayons-field__label;
       align-items: baseline;
       border-radius: $br-default;
-      display: inline-flex;
+      display: inline-block;
       flex-direction: row;
       padding: 0 $su-1;
       width: 100%;
